# ADDISEXPORTER

./: README.md
AddisAnalytics/: .dockerignore  .gitignore  Dockerfile  ENTERPRISE_APP_SUMMARY.md  app.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
AddisAnalytics/app/: globals.css  layout.tsx  page.tsx
AddisAnalytics/app/analytics/: page.tsx
AddisAnalytics/app/documents/: page.tsx
AddisAnalytics/app/lots/: page.tsx
AddisAnalytics/app/settings/: page.tsx
AddisAnalytics/app/shipments/: page.tsx
AddisAnalytics/attached_assets/: Pasted-Build-a-secure-enterprise-grade-web-app-for-Ethiopian-coffee-producers-exporters-that-ingests-data--1760832937796_1760832937797.txt  Pasted-Prompt-Build-a-professional-grade-web-and-mobile-application-called-Addis-Exporter-Analytics-desi-1759955075259_1759955075260.txt  Pasted-goal-Build-a-secure-enterprise-grade-web-app-for-Ethiopian-coffee-producers-exporters-that-ingests-1760833567465_1760833567465.txt
AddisAnalytics/coffee-app/: PROJECT_INFO.md  README.md  SETUP.md  package.json
AddisAnalytics/lib/: agent.ts  analytics.ts  data.ts  prisma.ts
AddisAnalytics/pages/: batch_management.py  dashboard.py  enterprise_quality.py  traceability.py
AddisAnalytics/prisma/: dev.db  schema.prisma  seed.ts
AddisAnalytics/scripts/: docker-entrypoint.sh  lint.mjs  share.mjs
AddisAnalytics/utils/: ai_assistant.py  ai_copilot.py  coffee_classifier.py  data_processor.py  enterprise_analytics.py  enterprise_data_model.py  qr_generator.py  report_generator.py
(+32 files in other folders)
